PaymentHandler: Fix a crash when canMakePayment() is called.

It happens when |mModifiers| variable is null.

Bug: 762003
Change-Id: I37a9837afc80aa239f742ae4c648f05eeb5ca0f9