content/browser/payments/payment_app_database.cc
@@ -194,15 +194,12 @@ void PaymentAppDatabase::WritePaymentInstrument(
   DCHECK_CURRENTLY_ON(BrowserThread::IO);
 
   if (instrument->icons.size() > 0) {
-    std::unique_ptr<PaymentInstrumentIconFetcher> icon_fetcher =
-        base::MakeUnique<PaymentInstrumentIconFetcher>();
-    icon_fetcher->Start(
-        instrument->icons, service_worker_context_,
+    PaymentInstrumentIconFetcher::Start(
+        service_worker_context_, instrument->icons,
         base::BindOnce(&PaymentAppDatabase::DidFetchedPaymentInstrumentIcon,
                        weak_ptr_factory_.GetWeakPtr(), scope, instrument_key,
                        base::Passed(std::move(instrument)),
-                       base::Passed(std::move(callback)),
-                       base::Passed(std::move(icon_fetcher))));
+                       base::Passed(std::move(callback))));
   } else {
     service_worker_context_->FindReadyRegistrationForPattern(
         scope,
@@ -219,11 +216,9 @@ void PaymentAppDatabase::DidFetchedPaymentInstrumentIcon(
     const std::string& instrument_key,
     payments::mojom::PaymentInstrumentPtr instrument,
     WritePaymentInstrumentCallback callback,
-    std::unique_ptr<PaymentInstrumentIconFetcher> icon_fetcher,
     const std::string& icon) {
   DCHECK_CURRENTLY_ON(BrowserThread::IO);
 
-  icon_fetcher.reset();
   if (icon.empty()) {
     std::move(callback).Run(PaymentHandlerStatus::FETCH_INSTRUMENT_ICON_FAILED);
     return;
